Commit working POC for S3 object store

--- a/views/hello.html
+++ b/views/hello.html
@@ -1,5 +1,9 @@
 <html>
 <body>
-<h1>Hello {{param}}</h1>
+<span>
+    {% for item in items %}
+        <p>{{item}}</p>
+   {% endfor %}
+</span>
 </body>
 </html>
