Add POC for hardcoded Athena call

--- a/views/hello.html
+++ b/views/hello.html
@@ -2,7 +2,7 @@
 <body>
 <span>
     {% for item in items %}
-        <p>{{item}}</p>
+        <p>{{item|json}}</p>
    {% endfor %}
 </span>
 </body>
